# Panelio-Backend

./: .env.example  .gitignore  Makefile  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_make_created_at_timezone_aware.py  0003_add_viva_duration_and_attendee_sessions.py  0004_remove_order_index.py  dc2edcd65189_initial_migration.py
app/: main.py
app/core/: config.py  database.py  redis.py  security.py
app/features/attend/: dao.py  handler.py  model.py  router.py  schema.py  service.py
app/features/auth/: dao.py  handler.py  model.py  router.py  schema.py  service.py
app/features/questions/: dao.py  handler.py  model.py  router.py  schema.py  service.py
app/features/vivas/: dao.py  handler.py  model.py  router.py  schema.py  service.py
app/shared/: audio.py  dependencies.py  email.py  exceptions.py  llm.py  responses.py
